src/main/webapp/css/all.css
body {
    background: url(/images/background.jpg);
    background-repeat: no-repeat;
    background-color: #171518 !important;
    background-attachment: fixed;
    color: #344644;
    font-family: 'Open Sans',sans-serif !important;
    font-weight: 400 !important;
    font-size: 16px !important;
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Open Sans',sans-serif !important;
    font-weight: 300 !important;
}

h1, h2, h3 {
    margin-bottom: 10px !important;
    margin-top: 10px !important;
}

h1.pageTitle {
    color: #610305;
}

.center { text-align: center; }

.clear { clear:both; }

.container.jumbo {
    padding: 0px 5px 10px 5px;
    background: rgba(200, 200, 200, 0.8);
    min-height: 1000px;
}

.panel-default > .panel-heading a {
    color: #fff
}

#historyHeading, #currentChampionshipHeading {
    background: #B51411;
}

#eventsHeading, #overallStatsHeading {
    background: rgba(50, 50, 50, 0.8);
}

#socialHeading, #otherStatsHeading {
    background: rgba(10, 10, 10, 0.8);
}


.panel-body {
    background: rgba(200, 200, 200, 0.6);
    padding: 10px !important;
}

.standardTable {
    width: 100%;
    background-color: white;
}

li a {
    display: block;
    color: #000;
    text-decoration: none;
}

a:hover {
    text-decoration:none !important;
}

a:visited {
    //color: #eee !important;
    text-decoration:none !important;
}

a:active {
    color: #eee !important;
    text-decoration:none !important;
}

ul.floating li {
    float:left;
    overflow: auto;
}

/* Bootstrap hacks for tables */
.table-striped > tbody > tr:nth-child(2n) > td, .table-striped > tbody > tr:nth-child(2n) > th {
    background-color:  rgba(220, 220, 220, 0.6) !important;
}

.table-striped > tbody > tr:nth-child(2n+1) > td, .table-striped > tbody > tr:nth-child(2n+1) > th {
    background-color: rgba(240, 240, 240, 0.6) !important;
}

.table-striped tr td, .table-striped tr td a {
    color: #222 !important;
    font-weight: 100 !important;
    font-size: 18px;
}

/* Editions page */
.editionDiv {
    float:left;
    color: #ddd;
    background: #B51411;
    text-align: center;
}

.editionDiv a {
    //padding: 35px 10px 10px 10px;
    display: block;
    color: #eee;
    //height: 120px;
    min-width: 250px;
    font-size: 28px;
    font-weight: 100 !important;
}

ul.editions li {
    margin: 2px;
}

.editionDiv a:hover {
    background: #94100E;
    color: #eee !important;
}

.editionDiv a:visited {
    color: #eee !important;
    text-decoration: none !important;
}

.editions .editionData {
    padding: 10px;
}

.editions .editionId {
    margin-top: 0px !important;
    margin-bottom: 0px !important;
    text-align: right;
    font-weight: 400 !important;
}

.editions .winner {
    margin-top: 40px !important;
    margin-bottom: 0px !important;
    font-weight: 100 !important;
    text-align: left;
}

.editions .time {
    margin-top: 5px;
    margin-bottom: 0px;
    text-align: left;
    font-size: 15px;
    font-weight: 100 !important;
}

/* Racer results (used in Race and Edition pages)*/
#racerResultsTable_filter {
    margin-bottom: 50px;
}

#racerResultsTable {
    background-color: white;
}

li .race a {
    padding: 20px 40px;
}

/* Standings page */
#standingsTable .edition {
    text-align: center;
    text-transform: uppercase;
}

#standingsTable .position {
    text-align: center;
}

#standingsTable .points {
    text-align: center;
    font-weight: 300 !important;
}

#standingsTable .points.pointsTotal {
    font-weight: 400 !important;
}


#standingsTable .first {
    background-color: #FFec88 !important;
}

#standingsTable .second {
    background-color: #ccc !important;
}

#standingsTable .third {
    background-color: #FFDF9F !important;
}

#standingsTable .racerHeader {
    min-width: 200px;
}

#standingsTable th, #racerResultsTable th, #events th {
    background-color: #B51411;
    color: white;
    font-weight: 400 !important;
    font-size: 14px;
    text-align: center;
}

#events th {
    text-transform: uppercase;
}

#events .eventTime {
    text-align: center;
}

#standingsTable {
    background-color: white;
}

.number {
    font-weight: 400 !important;
}

#racerStandingsStatsDiv, #racerEditionsStatsDiv, #racerOtherStatsDiv {
    color: #ddd;
}

#racerDiv span {
    display: block;
}

#racerDiv h3 {
    margin-top: 0px !important;
}

span.racerStatsKey {
    font-weight: 200 !important;
}

span.racerStatsValue {
    font-weight: 400 !important;
}

td.racer a:hover, #events a:hover  {
    background: #B51411 !important;
    color: #eee !important;
}

/* Facebook like box */
.fb-like-box {
    margin-top: 10px;
    background-color: white;
}

.wrapFbComments {
    background-color: rgba(250, 250, 250, 1) !important;
}

/* Twitter stream */
#twitter-f1 {
    margin-top: 10px;
}

/* Videos page and faceted search */
#videos {
    //font-size: 14px;
}

.videoDiv.row {
    background-color: rgba(200, 200, 200, 0.6);
    padding: 0px !important;
    margin: 3px 0px;
    color: white;
}

.video {
    background-color: #ddd;
    padding: 0px !important;
    margin: 0px;
}

#facets, .videoDiv.row, #racerOtherStatsDiv, #racerEditionsStatsDiv, #racerStandingsStatsDiv {
    color: #333;
    font-weight: 100 !important;
}

#filterHeading {
    background: #B51411;
}

#videosHeading {
    background: rgba(10, 10, 10, 0.8);
}

.facetsearch {
    display: inline-block;
    vertical-align: top;
    width: 200px;
}

.activefacet {
    font-weight: 400 !important;
    color: eee;
}

.facetitem:hover {
    color: #94100E;
}

.bottomline .facettotalcount {
    display: inline-block;
}

.bottomline .deselectstartover {
    display: inline-block;
    float: right;
}

.bottomline .orderby {
    display: inline-block;
}

.bottomline .orderby span {
    margin: 0;
    padding: 0;
    display: inline-block;
}

.bottomline .orderby ul {
    margin: 0px;
    padding: 0px;
    display: inline-block;
}

.bottomline .orderbyitem {
    display: inline-block;
}

.videoDetail {
    padding-top: 15px;
}

.videoDetailKey {
    margin-top: 0px;
    margin-bottom: 0px;
    font-size: 15px;
}

.videoDetailValue {
    margin-top: 0px;
    margin-bottom: 5px;
    font-weight: 400 !important;
    font-size: 16px;
}

/* Histogram */
.bar {
  fill: steelblue;
}

.bar:hover {
  fill: brown;
}

.axis {
  font: 12px sans-serif;
  stroke: #777;
  fill: none;
}

.axis path,
.axis line {
  fill: none;
  shape-rendering: crispEdges;
}

.x.axis path {
  display: none;
}

svg text {
    color: #fff;
}

.navbar {
    margin-bottom: 0px !important;
}

#events_wrapper input, #events_length, #events_filter {
    font-weight: 400;
}

